--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "connect-flash": "~0.1.1",
     "passport-local": "~1.0.0",
     "passport": "~0.2.1",
-    "express-session": "~1.9.3"
+    "express-session": "~1.9.3",
+    "ejs": "~1.0.0"
   },
   "devDependencies": {
     "chai": "^1.10.0",
